Fix endpoints behaviour and swagger functionning
